<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jeanjar.appciclodevida.MainActivity">

    <Button
        android:text="@string/btnActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnActivity"
        />
    <Button
        android:text="@string/btnAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAlertDialog"
        android:onClick="btnAlertClick"
        />
    <Button
        android:text="@string/btnItens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnItens"
        android:onClick="btnItensClick"
        />
    <Button
        android:text="@string/btnRadios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRadios"
        android:onClick="btnDialog3Click"
        />
    <Button
        android:text="@string/btnDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDialogs"
        />
    <Button
        android:text="@string/btnDatePickerDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDatePickerDialog"
        />
    <Button
        android:text="@string/btnTimePickerDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnTimePickerDialog"
        />
</LinearLayout>
