<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_slave"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jeanjar.appciclodevida.SlaveActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/editTextSlave"
        android:ems="10"
        android:id="@+id/editTextSlave" />

    <Button
        android:text="@string/btnSlaveAdicionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSlaveAdicionar" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_height="match_parent">

        <Button
            android:text="@string/btnSlaveVoltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSlaveVoltar" />
    </LinearLayout>

</LinearLayout>
